--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,25 @@ android {
 
 dependencies {
     ext.supportVersion = "25.1.0"
+    ext.okHttpVersion = '3.2.0'
+    ext.retrofitVersion = '2.0.0'
+
+    // Android dependencies
     compile "com.android.support:appcompat-v7:${supportVersion}"
     compile "com.android.support:design:${supportVersion}"
+
+    // Retrofit dependencies
+    compile "com.squareup.retrofit2:retrofit:${retrofitVersion}"
+    compile "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
+
+    // OkHttp dependencies
+    compile "com.squareup.okhttp3:okhttp:${okHttpVersion}"
+
+    // Test dependencies
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+
+    provided        "com.yotadevices.libs.internal:sdk:3.7.14"
 }
