--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
           package="me.dmitvitalii.cosmos">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,11 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".DetailsActivity"/>
-
         <uses-library
             android:name="com.yotadevices.sdk"
             android:required="true"/>
+
+        <activity android:name=".DetailsActivity"/>
 
         <service
             android:name=".CosmoService"
