--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 0
-        versionName "0.1"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionName "0.2"
     }
     buildTypes {
         release {
@@ -35,11 +34,6 @@ dependencies {
     // OkHttp dependencies
     compile "com.squareup.okhttp3:okhttp:${okHttpVersion}"
 
-    // Test dependencies
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'
-
+    // YotaPhone dependencies
     provided        "com.yotadevices.libs.internal:sdk:3.7.14"
 }
