--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:${okHttpVersion}"
 
     // YotaPhone dependencies
-    provided "com.yotadevices.libs.internal:sdk:3.7.14"
+    compile 'com.android.support:support-v4:25.1.0'
+    provided 'com.yotadevices.libs.internal:sdk:3.7.14'
 }
