--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
@@ -11,6 +12,7 @@ allprojects {
     repositories {
         maven { url "http://fw.ydevices.com/maven" }
         jcenter()
+        google()
     }
 }
 
