--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "me.dmitvitalii.cosmos"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 0
         versionName "0.3.5"
     }
@@ -19,13 +19,14 @@ android {
 }
 
 dependencies {
-    ext.supportVersion = "25.1.0"
+    ext.supportVersion = "27.1.0"
     ext.okHttpVersion = '3.2.0'
     ext.retrofitVersion = '2.0.0'
 
     // Android dependencies
-    compile "com.android.support:appcompat-v7:${supportVersion}"
-    compile "com.android.support:design:${supportVersion}"
+    compile "com.android.support:appcompat-v7:$supportVersion"
+    compile "com.android.support:support-v4:$supportVersion"
+    compile "com.android.support:design:$supportVersion"
 
     // Retrofit dependencies
     compile "com.squareup.retrofit2:retrofit:${retrofitVersion}"
@@ -35,6 +36,5 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:${okHttpVersion}"
 
     // YotaPhone dependencies
-    compile 'com.android.support:support-v4:25.1.0'
     provided 'com.yotadevices.libs.internal:sdk:3.7.14'
 }
